--- a/assignment3.ipynb
+++ b/assignment3.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,6 +34,51 @@
     "# Filter all warnings. If you would like to see the warnings, please comment the two lines below.\n",
     "import warnings\n",
     "warnings.filterwarnings('ignore')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting xlrd\n",
+      "  Downloading xlrd-2.0.1-py2.py3-none-any.whl.metadata (3.4 kB)\n",
+      "Downloading xlrd-2.0.1-py2.py3-none-any.whl (96 kB)\n",
+      "Installing collected packages: xlrd\n",
+      "Successfully installed xlrd-2.0.1\n"
+     ]
+    }
+   ],
+   "source": [
+    "! pip install xlrd\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting openpyxl\n",
+      "  Downloading openpyxl-3.1.5-py2.py3-none-any.whl.metadata (2.5 kB)\n",
+      "Collecting et-xmlfile (from openpyxl)\n",
+      "  Downloading et_xmlfile-2.0.0-py3-none-any.whl.metadata (2.7 kB)\n",
+      "Downloading openpyxl-3.1.5-py2.py3-none-any.whl (250 kB)\n",
+      "Downloading et_xmlfile-2.0.0-py3-none-any.whl (18 kB)\n",
+      "Installing collected packages: et-xmlfile, openpyxl\n",
+      "Successfully installed et-xmlfile-2.0.0 openpyxl-3.1.5\n"
+     ]
+    }
+   ],
+   "source": [
+    "! pip install openpyxl\n"
    ]
   },
   {
@@ -92,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 13,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -632,7 +677,7 @@
        "Brazil              2.412231e+12  2.319423e+12  "
       ]
      },
-     "execution_count": 33,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -640,17 +685,17 @@
    "source": [
     "def answer_one():\n",
     "    # YOUR CODE HERE\n",
-    "    Energy = pd.read_excel('assets/Energy Indicators.xls',skiprows=17, skipfooter=38)\n",
+    "    Energy = pd.read_excel('Energy Indicators.xls',skiprows=17, skipfooter=38)\n",
     "    Energy = Energy.iloc[:,2:]\n",
     "    Energy = Energy.rename(columns={'Unnamed: 2':'Country','Petajoules':'Energy Supply','Gigajoules':'Energy Supply per Capita', \n",
     "                   '%': '% Renewable'})\n",
-    "    Energy.replace(\"...\", np.NaN, inplace=True)\n",
+    "    Energy.replace(\"...\", np.nan, inplace=True)\n",
     "    Energy['Energy Supply']= Energy['Energy Supply']*1000000\n",
     "    Energy['Country'].replace({r'(\\s\\(.*\\))':'',r'(\\d+)':''},regex=True,inplace=True)\n",
     "    Energy['Country'].replace({\"Republic of Korea\": \"South Korea\", \"United States of America\": \"United States\", \"United Kingdom of Great Britain and Northern Ireland\": \"United Kingdom\", \"China, Hong Kong Special Administrative Region\": \"Hong Kong\"},inplace=True)\n",
-    "    GDP = pd.read_csv('assets/world_bank.csv',header=4)\n",
+    "    GDP = pd.read_csv('world_bank.csv',header=4)\n",
     "    GDP['Country Name'].replace({\"Korea, Rep.\": \"South Korea\",  \"Iran, Islamic Rep.\": \"Iran\", \"Hong Kong SAR, China\": \"Hong Kong\"},inplace=True)\n",
-    "    ScimEn = pd.read_excel('assets/scimagojr-3.xlsx')\n",
+    "    ScimEn = pd.read_excel('scimagojr-3.xlsx')\n",
     "    ScimEnshort = ScimEn.head(15)\n",
     "    GDPshortcolumn = ['Country Name', 'Country Code', 'Indicator Name', 'Indicator Code','2006', '2007', '2008', '2009', '2010', '2011', '2012', '2013','2014', '2015']\n",
     "    GDPshort = GDP[GDPshortcolumn]\n",
@@ -668,7 +713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 14,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -736,7 +781,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 15,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -783,7 +828,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 19,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -810,7 +855,7 @@
        "158"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -818,17 +863,17 @@
    "source": [
     "def answer_two():\n",
     "    # YOUR CODE HERE\n",
-    "    Energy = pd.read_excel('assets/Energy Indicators.xls',skiprows=17, skipfooter=38)\n",
+    "    Energy = pd.read_excel('Energy Indicators.xls',skiprows=17, skipfooter=38)\n",
     "    Energy = Energy.iloc[:,2:]\n",
     "    Energy = Energy.rename(columns={'Unnamed: 2':'Country','Petajoules':'Energy Supply','Gigajoules':'Energy Supply per Capita', \n",
     "                   '%': '% Renewable'})\n",
-    "    Energy.replace(\"...\", np.NaN, inplace=True)\n",
+    "    Energy.replace(\"...\", np.nan, inplace=True)\n",
     "    Energy['Energy Supply']= Energy['Energy Supply']*1000000\n",
     "    Energy['Country'].replace({r'(\\s\\(.*\\))':'',r'(\\d+)':''},regex=True,inplace=True)\n",
     "    Energy['Country'].replace({\"Republic of Korea\": \"South Korea\", \"United States of America\": \"United States\", \"United Kingdom of Great Britain and Northern Ireland\": \"United Kingdom\", \"China, Hong Kong Special Administrative Region\": \"Hong Kong\"},inplace=True)\n",
-    "    GDP = pd.read_csv('assets/world_bank.csv',header=4)\n",
+    "    GDP = pd.read_csv('world_bank.csv',header=4)\n",
     "    GDP['Country Name'].replace({\"Korea, Rep.\": \"South Korea\",  \"Iran, Islamic Rep.\": \"Iran\", \"Hong Kong SAR, China\": \"Hong Kong\"},inplace=True)\n",
-    "    ScimEn = pd.read_excel('assets/scimagojr-3.xlsx')\n",
+    "    ScimEn = pd.read_excel('scimagojr-3.xlsx')\n",
     "    GDP.rename(columns={\"Country Name\":\"Country\"},inplace=True)\n",
     "    merge_ScimEn_Energy_inner = pd.merge(ScimEn,Energy,how=\"inner\",left_on=\"Country\",right_on=\"Country\")\n",
     "    merge_ScimEn_Energy_GDP_inner =pd.merge(merge_ScimEn_Energy_inner,GDP,how=\"inner\",left_on=\"Country\",right_on=\"Country\").set_index(\"Country\")\n",
@@ -844,7 +889,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 20,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -859,7 +904,15 @@
      "solution": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "319 161\n"
+     ]
+    }
+   ],
    "source": [
     "assert type(answer_two()) == int, \"Q2: You should return an int number!\"\n"
    ]
@@ -888,7 +941,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 21,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -924,7 +977,7 @@
        "Name: Average, dtype: float64"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -941,7 +994,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 22,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -973,7 +1026,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 23,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -997,10 +1050,10 @@
     {
      "data": {
       "text/plain": [
-       "246702696075.3999"
+       "np.float64(246702696075.3999)"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1018,7 +1071,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 24,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1062,7 +1115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 25,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1079,10 +1132,10 @@
     {
      "data": {
       "text/plain": [
-       "157.6"
+       "np.float64(157.6)"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1098,7 +1151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 26,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1142,7 +1195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 27,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1159,10 +1212,10 @@
     {
      "data": {
       "text/plain": [
-       "('Brazil', 69.64803)"
+       "('Brazil', np.float64(69.64803))"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1178,7 +1231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 28,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1225,7 +1278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 29,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1242,10 +1295,10 @@
     {
      "data": {
       "text/plain": [
-       "('China', 0.6893126179389422)"
+       "('China', np.float64(0.6893126179389422))"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1262,7 +1315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 30,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1310,7 +1363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 31,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1330,7 +1383,7 @@
        "'United States'"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1347,7 +1400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 32,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1394,7 +1447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 33,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1411,10 +1464,10 @@
     {
      "data": {
       "text/plain": [
-       "0.7940010435442946"
+       "np.float64(0.7940010435442946)"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1432,7 +1485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 34,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1460,7 +1513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 35,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1504,7 +1557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 36,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1540,7 +1593,7 @@
        "Name: HighRenew, dtype: int64"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1563,7 +1616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 37,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1625,7 +1678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 38,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1723,7 +1776,7 @@
        "South America     1  2.059153e+08  2.059153e+08           NaN"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1763,7 +1816,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 39,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1811,7 +1864,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 40,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1857,7 +1910,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1891,7 +1944,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 41,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1939,7 +1992,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 42,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1975,7 +2028,7 @@
        "Name: Population, dtype: object"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1993,7 +2046,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 43,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -2038,7 +2091,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -2070,6 +2123,13 @@
     "This is a bubble chart showing % Renewable vs. Rank. The size of the bubble corresponds to the countries' \\\n",
     "2014 GDP, and the color corresponds to the continent.\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
